# src/v1/routers/booksManage.routes.js
@@ -1,8 +1,10 @@
 const { Router } = require('express')
 const router = Router()
+const verifyToken = require('../../middleware/verifyToken.js')
+const { createBooks } = require('../../controller/books.controller.js')
 
 router
-    .get('/',)
+    .post('/createBook', verifyToken, createBooks)
 
 
 module.exports = router
